tests/compile_fail/combined_generics.stderr
error: Cannot combine enum and trait generics
 --> tests/compile_fail/combined_generics.rs:2:22
  |
2 |     pub enum FooOrBar<T> {
  |                      ^^^
